<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_app"
    tools:context=".Details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        android:orientation="horizontal"
        android:paddingTop="12dp"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="44dp">

            <TextView
                android:id="@+id/tvNomVoyage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nomVoyage"
                android:textColor="@color/white"
                android:textSize="@dimen/titre_page"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listeDate"
                android:textColor="@color/white" />
        </LinearLayout>

        <ImageView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_baseline_info_24"
            android:layout_marginEnd="14dp"
            android:layout_gravity="center_vertical"
            android:minWidth="@dimen/icon_min"
            android:minHeight="@dimen/icon_min"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/pageDetails"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Pays -->
            <androidx.cardview.widget.CardView style="@style/details_card">
                <LinearLayout
                    android:id="@+id/llPays"
                    style="@style/detail_layout">
                    <TextView
                        style="@style/details_titre"
                        android:text="@string/titlePays"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Transports -->
            <androidx.cardview.widget.CardView style="@style/details_card" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <LinearLayout style="@style/detail_layout_transports">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/aller"/>
                        <TextView
                            android:id="@+id/tvTransportAller"
                            android:gravity="center"
                            style="@style/details_texte"
                            android:layout_margin="0dp"
                            android:textSize="@dimen/texte_page"
                            android:textStyle="bold"
                            android:text="@string/transportAller" />
                    </LinearLayout>
                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/light_grey"
                        android:layout_marginVertical="8dp"/>
                    <LinearLayout style="@style/detail_layout_transports">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/retour"/>
                        <TextView
                            android:id="@+id/tvTransportRetour"
                            style="@style/details_texte"
                            android:gravity="center"
                            android:layout_margin="0dp"
                            android:textSize="@dimen/texte_page"
                            android:textStyle="bold"
                            android:text="@string/transportRetour" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Hôtels -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cvHotel"
                style="@style/details_card">
                <LinearLayout
                    android:id="@+id/llHotel"
                    style="@style/detail_layout">
                    <TextView
                        style="@style/details_titre"
                        android:text="@string/titleHotel"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Visites -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cvVisite"
                style="@style/details_card">
                <LinearLayout
                    android:id="@+id/llVisite"
                    style="@style/detail_layout">
                    <TextView
                        style="@style/details_titre"
                        android:text="@string/titleVisite"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Tarifs -->
            <androidx.cardview.widget.CardView style="@style/details_card">
                <LinearLayout style="@style/detail_layout">
                    <TextView
                        style="@style/details_titre"
                        android:text="@string/titleTarif"/>
                    <TextView
                        android:id="@+id/tvTarif"
                        style="@style/details_texte"
                        android:text="@string/listeTarif" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>